@startuml ecommerce
class Pessoa{
  - nome : String
  - email : String
  - cpf : String
  - aniversario : LocalDate
  - sexo : Sexo
  - listaTelefone : List<Telefone>
}

class Funcionario{
  - idFuncionario : Long
  - cargo : String 
}

class Cliente{
  - idCliente
}


Enum Sexo{
  FEMININO : Integer
  MASCULINO : Integer
}


class Fornecedor{
  - idFornecedor : Long
  - nome : String
  - endereco : String 
  - email : String
  - cnpj : String
  - listaTelefone : List<Telefone>
  - listaProduto : List<Produto>
}


class Produto{
  - idProduto : Long
  - nomeProduto : String
  - marca : Marca
  - preco : Double
  - material : String
  - dimensoes : String
  - nomeModelo : String
}

class Camera{
  - idCameras : Long
  - conectividade : String
  - resolucao : String
  - telaArticulavel : Boolean
  - telaSensivelToque : Boolean
  - tela : String
  - iso : String
  - flashPopUp : Boolean
  - garantia : Integer
}

class Marca{
  - idMarca : Long
  - nome : String
}


class Lente{
  - idLente : String
  - compatibilidade : String
  - distanciaFocal : Integer
  - diametroFiltro : Integer
  - montagem : String
}

class DefaultEntity{
  - id : Long
  - dataCadastro : LocalDateTime
  - dataAlteracao : LocalDateTime
}

class Telefone{
  - codigoArea : String
  - numero : String
}

Pessoa "1" *--> "*" Telefone
Pessoa "1" --> "1" Funcionario
Pessoa "1" --> "1" Cliente
Pessoa "*" *--> "1" Sexo
DefaultEntity <|-- Telefone

Pessoa -up-|> DefaultEntity 

Marca "1" <-left-* "*" Produto

Fornecedor "1" *-up-> "*" Telefone
Produto "*" o--> "1" Fornecedor
Produto <|-- Camera
Produto <|-- Lente
@enduml
